conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: too many arguments for method gauche: ()Unit
  gauche(2)
        ^