conditions.Conditions.scala.code
if(estFaceMur()){
  gauche(2)
  avance()
}
else{
  avance()
}